--- a/app/src/main/res/layout/card_cast.xml
+++ b/app/src/main/res/layout/card_cast.xml
@@ -1,46 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="4dp"
+    app:cardCornerRadius="0dp">
 
-    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_normal"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/castPosterIv"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginStart="@dimen/margin_normal"
-            android:layout_marginEnd="@dimen/margin_normal"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:background="@android:color/darker_gray"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_person" />
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/castNameTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="8dp"
-            android:orientation="vertical">
+            android:layout_marginHorizontal="4dp"
+            android:singleLine="true"
+            android:textSize="14sp"
+            tools:text="Pewdiepie" />
 
-            <TextView
-                android:id="@+id/castNameTv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="18sp"
-                tools:text="Pewdiepie" />
+        <TextView
+            android:id="@+id/castCharacterTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="4dp"
+            android:layout_marginBottom="4dp"
+            android:singleLine="true"
+            android:textSize="12sp"
+            android:textStyle="italic"
+            tools:text="LWIAY" />
 
-            <TextView
-                android:id="@+id/castCharacterTv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:textStyle="italic"
-                tools:text="LWIAY" />
-
-
-        </LinearLayout>
 
     </LinearLayout>
+</androidx.cardview.widget.CardView>
+
