--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#4A2CF5</color>
-    <color name="colorPrimaryDark">#3d00e0</color>
-    <color name="colorAccent">#d7f52c</color>
+    <color name="colorPrimary">#3f51b5</color>
+    <color name="colorPrimaryDark">#002984</color>
+    <color name="colorAccent">#ffeb3b</color>
 </resources>
