--- a/app/src/main/res/menu/menu_popular.xml
+++ b/app/src/main/res/menu/menu_popular.xml
@@ -2,7 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/searchItem"
+    <item
+        android:id="@+id/searchItem"
         android:icon="@drawable/ic_search"
         android:title="@string/search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
